--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -23,8 +23,6 @@ on:
 jobs:
   check:
     runs-on: ubuntu-latest
-    container: node:18.14.2
-
 
     steps:
 
@@ -52,11 +50,13 @@ jobs:
       if: steps.cacheHash.outputs.cache-hit != 'true'
       uses: peter-evans/repository-dispatch@v1
       with:
+        node-version: '16'
         token: ${{ secrets.ACTIONS_TRIGGER_PAT }}
         event-type: Source Code Update
 
     - name: Delete workflow runs
       uses: GitRML/delete-workflow-runs@main
       with:
+        node-version: '16'
         retain_days: 1
         keep_minimum_runs: 1
