--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -25,7 +25,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-
+    
     - name: Get Commit Hash
       id: getHash
       run: |
@@ -55,5 +55,6 @@ jobs:
     - name: Delete workflow runs
       uses: GitRML/delete-workflow-runs@main
       with:
+        using: 'node16'
         retain_days: 1
         keep_minimum_runs: 1
