--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -55,6 +55,8 @@ jobs:
     - name: Delete workflow runs
       uses: GitRML/delete-workflow-runs@main
       with:
-        using: 'node16'
+        node-version: '16'
+        token: ${{ secrets.AUTH_PAT }}
+        repository: ${{ github.repository }}
         retain_days: 1
         keep_minimum_runs: 1
