--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -20,7 +20,7 @@ on:
   schedule:
     - cron: 0 16 * * *
 
-jobs:
+jobs:  
   check:
     runs-on: ubuntu-latest
 
@@ -53,10 +53,8 @@ jobs:
         event-type: Source Code Update
 
     - name: Delete workflow runs
-      uses: GitRML/delete-workflow-runs@main
+      #uses: GitRML/delete-workflow-runs@main
+      uses: Mattraks/delete-workflow-runs@main
       with:
-        node-version: '16'
-        token: ${{ secrets.AUTH_PAT }}
-        repository: ${{ github.repository }}
         retain_days: 1
         keep_minimum_runs: 1
